...
    
    lazy var optionBar = UIView().then {
        $0.backgroundColor = .white
    }
    
    lazy var backButton = UIButton().setImageButton(UIImage(systemName: "arrow.left")).then {
        $0.accessibilityLabel = "detailBack"
        $0.publisher(for: .touchUpInside).sink(receiveCompletion: { _ in
        }, receiveValue: { [weak self] _ in
            self?.onBackPressed()
        }).store(in: &cancelBag)
    }
    
...
        } else {
            $0.setTitle("Cancel Bookmark", for: .normal)
        }
        $0.setTitleColor(.white, for: .normal)
        $0.backgroundColor = .darkGray
        $0.isHidden = true
        $0.accessibilityLabel = "detailBookmark"
        $0.publisher(for: .touchUpInside).sink(receiveCompletion: { _ in
        }, receiveValue: { [weak self] _ in
            self?.onBookmarkPressed()
        }).store(in: &cancelBag)
        
    }
...
